# AdaptiveCV

./: .env_example  README.md  main.py  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py
app/: README.md  package-lock.json  package.json
app/components/: FileLand.tsx  Information.tsx  LoadingAnimation.tsx  SuccessInfo.tsx  welcome.tsx
app/components/icon/: BasicFile.tsx  Info.tsx  QuestionMark.tsx
app/components/modal/: GenerateInfo.tsx  Loading.tsx  OptimizeInfo.tsx
app/components/wrapper/: Layout.tsx
app/pages/: _app.tsx  _document.tsx  index.tsx
app/pages/generate/: index.tsx
app/pages/optimize/: index.tsx
app/public/: dino-loading.webm  loading.webm
app/styles/: globals.css  text.module.css
app/utils/: api.ts
src/: __init__.py  adaptivecv.py  envs.py
src/demo/: old_profile.json  user_profile.json
src/models/: __init__.py  jobs.py  sections.py
src/prompts/: __init__.py  resume_prompt.py  sections_prompt.py
src/templates/: resume.cls  resume.tex.jinja
src/utils/: data_processing.py  latex_ops.py  llm_models.py  metrics.py  utils.py
